--- a/.github/workflows/ReleaseBuild.yml
+++ b/.github/workflows/ReleaseBuild.yml
@@ -2,7 +2,7 @@ name: Publish Release
 on:
   push:
     tags:
-      - 'v*'
+      - 'main'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
