--- a/.github/workflows/ReleaseBuild.yml
+++ b/.github/workflows/ReleaseBuild.yml
@@ -1,8 +1,5 @@
 name: Publish Release
-on:
-  push:
-    tags:
-      - 'main'
+on: [push]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
