--- a/.github/workflows/ReleaseBuild.yml
+++ b/.github/workflows/ReleaseBuild.yml
@@ -13,16 +13,27 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      - uses: rojo-rbx/setup-foreman@v1
+      - name: Install Foreman
+        uses: rojo-rbx/setup-foreman@v1
         with:
-            token: ${{ secrets.GITHUB_TOKEN }}
+            token: ${{ secrets.RELEASE_TOKEN }}
       - run: foreman install
 
       - run: rojo build -o release.rbxm default.project.json
+
+      - name: upload linux artifact
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./release.rbxm
+          asset_name: release.rbxm
+          asset_content_type: application/gzip
 
       - name: Create a Release
         uses: elgohr/Github-Release-Action@v4
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
-          title: MyReleaseMessage
+          title: Release
