Start writing CasterServer, CasterClient
- Finish writing CasterBase file
- Implemented CasterDebugger
- Add ReplicationBridge file
- Create Packages folder, use Stravant's Signal package for HumanoidCollided & Collided events

--- a/aftman.toml
+++ b/aftman.toml
@@ -3,4 +3,6 @@
 
 # To add a new tool, add an entry to this table.
 [tools]
-rojo = "rojo-rbx/rojo@7.2.1"
+rojo = "rojo-rbx/rojo@7.3.0"
+selene = "Kampfkarren/selene@0.24.0"
+wally = "UpliftGames/wally@0.3.2"
